Adding manager supervising employees to leave type breakdown